<resources>
    <string name="app_name">¿Quién es?</string>
    <string name="tvLiteralNumJugadores">Número de jugadores</string>
    <string name="tvLiteralCambiarNombre">Hora de hacer los equipos</string>
    <string name="tvNumeroDescartes">(Descarta %1$d personajes)</string>
    <string name="tvNumeroCartas">%1$d/%2$d</string>
    <string name="tvClasificacion">Clasificación</string>
    <string name="acNumJugadores">Jugador %1$d</string>
    <string name="tvTablas">-</string>
    <string name="tiempo">30</string>
    <string name="RES_TOTAL">Total</string>
    <string name="RES_R1">R1</string>
    <string name="RES_R2">R2</string>
    <string name="RES_R3">R3</string>
    <string name="R1_TITULO">Ronda 1</string>
    <string name="R2_TITULO">Ronda 2</string>
    <string name="R3_TITULO">Ronda 3</string>
    <string name="R1_DESCRIPCION">Tienes 30 segundos para conseguir adivinar todos los
        personajes posibles.\n\n
        El jugador empieza la ronda y puede decir lo que quiera, menos: \n
        - Palabras de la misma familia que el personaje propuesto\n
        - Palabras que "suenen igual"\n
        - Traducir los nombres a otro idioma\n
        - Deletrear\n\n
        En esta ronda no se puede pasar de personaje. Si cometes un fallo de los anteriores,
        el equipo pierde el turno. </string>
    <string name="R2_DESCRIPCION">En esta ronda sólo puedes utilizar una palabra para describir
        al personaje.\nEso sí, ahora puedes pasar de carta si no lo ves claro.\n\n
        El equipo que resuelve tiene que dar sólo una respuesta, si intentan dar dos a la vez
        distintas, cuenta la primera que se haya dicho. En el momento que den una contestación que
        no sea la correcta, hay que pasar.\n\n
        Después de cada turno, los personajes se barajean. Si el mazo da la vuelta por completo,
        los personajes que ya te han salido no vuelven a
        aparecer.</string>
    <string name="R3_DESCRIPCION">En esta ronda tienes que usar la mímica y los sonidos para que
        tu equipo descubra al personaje. Pero cuidado, cuando den una respuesta, ya será la
        definitiva.\n\n
        Después de cada turno, los personajes se barajean. Si el mazo da la vuelta por completo, los personajes que ya te han salido no vuelven a
        aparecer.</string>
    <string name="BATALLA_TITULO">Modo batalla</string>
    <string name="BATALLA_DESCRIPCIÓN">Se juega todos contra todos. Por turnos, el jugador da las
        pistas para descubrir el personaje y cuando otros de los jugadores acierte se llevan un
        punto cada uno.\n\nEn la segunda y tercera ronda, hay que esperar a que todos los jugadores
        respondan (o hasta que alguno acierte) para pasar al siguiente personaje, ¿vas a ser el
        lanzado que intenta adivinar todo a la primera, o esperarás a tener ayuda si fallan los
        demás?\n </string>
    <string name="EQ1">Equipo A</string>
    <string name="EQ2">Equipo B</string>
    <string name="EQ3">Equipo C</string>
    <string name="EQ4">Equipo D</string>
    <string name="J1">Jugador1</string>
    <string name="J2">Jugador2</string>
    <string name="J3">Jugador3</string>
    <string name="J4">Jugador4</string>
    <string name="J5">Jugador5</string>
    <string name="J6">Jugador6</string>
    <string name="J7">Jugador7</string>
    <string name="J8">Jugador8</string>
    <string name="J9">Jugador9</string>
    <string name="J10">Jugador10</string>
    <string name="J11">Jugador11</string>
    <string name="J12">Jugador12</string>
    <string name="NIVEL_FACIL">Fácil (4 cartas)</string>
    <string name="NIVEL_NORMAL">Normal (2 cartas)</string>
    <string name="NIVEL_DIFICIL">Difícil (0 cartas)</string>
    <string name="DESC_BTN_RESTAR">Botón para restar un jugador</string>
    <string name="DESC_BTN_SUMAR">Botón para añadir un jugador</string>
    <string name="DESC_BTN_EQUIPOS">Botón para jugar al modo equipos</string>
    <string name="DESC_BTN_BATALLA">Botón para jugar al modo batalla</string>
    <string name="DESC_BTN_LISTO">Botón para indicar que estamos listos</string>
    <string name="DESC_BTN_DUDAS">Botón con interrogaciones</string>
    <string name="DESC_BTN_GUARDAR">Botón para guardar</string>
    <string name="DESC_BTN_LUPA">Botón de una lupa, para mostrar contenido</string>
    <string name="DESC_BTN_SONIDO">Botón para activar / desactivar sonido</string>
    <string name="DESC_BTN_ERROR">Botón para indicar que se ha cometido un fallo</string>
    <string name="DESC_BTN_PASAR">Botón para pasar al siguiente personaje</string>
    <string name="DESC_BTN_ACIERTO">Botón para decir que hemos acertado</string>
    <string name="DESC_BTN_SIGUIENTE">Botón para pasar de ronda</string>
    <string name="PR_NUM_JUGADORES">Número de jugadores por defecto:</string>
    <string name="PR_BARAJAS">Baraja de cartas:</string>
    <string name="PR_BARAJA_AZUL">Azul</string>
    <string name="PR_BARAJA_AMARILLO">Amarillo</string>
    <string name="PR_DIFICULTAD">Dificultad (número de descartes):</string>
    <string name="PR_NUM_CARTAS">Número de cartas (40 normal):</string>
    <string name="PR_BORRAR_JUGADORES">Borrar nombre de jugadores</string>
</resources>