<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingStart="@dimen/paddingIntermedio"
    android:paddingEnd="@dimen/paddingIntermedio"
    tools:context=".fragments.Fragment4J"
    android:baselineAligned="false">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <EditText
                android:id="@+id/etNombreEquipo1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/EQ1"
                android:inputType="text"
                android:autofillHints="nombre equipo"
                style="@style/Equipos"/>

            <AutoCompleteTextView
                android:id="@+id/acE1J1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/J1"
                style="@style/Autocompletado"/>

            <AutoCompleteTextView
                android:id="@+id/acE1J2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/J2"
                style="@style/Autocompletado"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <EditText
                android:id="@+id/etNombreEquipo2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/EQ2"
                android:autofillHints="nombre equipo"
                style="@style/Equipos"/>

            <AutoCompleteTextView
                android:id="@+id/acE2J1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/J1"
                style="@style/Autocompletado"/>

            <AutoCompleteTextView
                android:id="@+id/acE2J2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/J2"
                style="@style/Autocompletado"/>

        </LinearLayout>

</LinearLayout>